# Deep-Research-Agent

./: .env  .gitignore  LICENSE  README.md  agent.py  configration.py  prompt.py  pyproject.toml  schema.py  states.py  tools.py  utils.py  writer_agent.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_checkpoint.3.pckl.tmp  .langgraph_ops.pckl
research/draft_hsi/: 2026-02-07-98ce508b.json
research/notes_hsi/: 2026-02-07-0245957d.json
research/notes_quantum/: 2026-01-18-71155bf4.json
research/question_hsi/: 2026-02-07-f43ba690.json
research/questions_quantum/: 2026-01-18-584313a5.json
research/sources_hsi/: 2026-02-07-d4dd617d.json
research/sources_quantum/: 2026-01-18-7b3233ef.json
research/todo_hsi/: 2026-02-07-553d3a4d.json
research/todo_quantum/: 2026-01-18-993922ac.json
