[project]
name = "deep-agent"
version = "0.1.0"
description = "This is deep research agent for content creation"
authors = [
    {name = "Prayag piya"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
