[project]
name = "deep-agent"
version = "0.1.0"
description = "This is deep research agent for content creation"
authors = [
    {name = "Prayag piya"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain (>=1.2.3,<2.0.0)",
    "langgraph (>=1.0.5,<2.0.0)",
    "langgraph-cli (>=0.4.11,<0.5.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph-api (>=0.6.27,<0.7.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "tavily-python (>=0.7.19,<0.8.0)",
    "langchain-tavily (>=0.2.16,<0.3.0)",
    "langchain-community (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0.0"